--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,20 +2,20 @@
   "compilerOptions": {
     "strict": false,
     "target": "es5",
-    "module": "commonjs",
+    "module": "ES2015",
     "declaration": true,
-    "outDir": "./lib",
+    "declarationDir": "./dist/types",
+    "outDir": "./dist/lib",
     "strict": true,
     "jsx": "react",
     "plugins": [
       { "name": "typescript-tslint-plugin" }
     ],
-    "baseUrl": "types",
     "typeRoots": ["types"],
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true
   },
   "include": [
-    "src/**/*"
+    "src"
   ]
 }
