--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "strict": false,
     "target": "es5",
     "module": "ES2015",
+    "moduleResolution": "node",
     "declaration": true,
     "declarationDir": "./dist/types",
     "outDir": "./dist/lib",
