test: set up testing configuration with ts-jest

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build-storybook": "build-storybook",
     "clean": "rm -rf dist",
     "build": "yarn clean && yarn rollup -c rollup.config.js",
-    "lint": "yarn tslint -p ."
+    "lint": "yarn tslint -p .",
+    "test": "jest"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
@@ -25,23 +26,22 @@
     "@types/faker": "^4.1.5",
     "@types/jest": "^24.0.11",
     "@types/react": "^16.8.7",
-    "@types/storybook__addon-actions": "^3.4.2",
-    "@types/storybook__addon-links": "^3.3.4",
-    "@types/storybook__addons": "^4.1.0",
     "@types/storybook__react": "^4.0.1",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.5",
     "faker": "^4.1.0",
-    "jest": "^24.3.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^24.7.1",
     "prettier": "1.16.4",
     "react": "^16.8.4",
     "react-docgen-typescript-loader": "^3.0.1",
     "react-docgen-typescript-webpack-plugin": "^1.1.0",
     "react-dom": "^16.8.4",
+    "react-testing-library": "^6.1.2",
     "rollup": "^1.6.0",
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-typescript2": "^0.20.1",
-    "ts-jest": "^24.0.0",
+    "ts-jest": "^24.0.2",
     "tslint": "^5.13.1",
     "tslint-config-prettier": "^1.18.0",
     "tslint-react": "^3.6.0",
