--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "rollup-plugin-typescript2": "^0.20.1",
     "ts-jest": "^24.0.2",
     "tslint": "^5.13.1",
+    "tslint-config-airbnb": "^5.11.1",
     "tslint-config-prettier": "^1.18.0",
+    "tslint-plugin-prettier": "^2.0.1",
     "tslint-react": "^3.6.0",
     "typescript": "^3.3.3333",
     "typescript-tslint-plugin": "^0.3.1"
