--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-data-scroller",
-  "version": "0.0.1-rc.1",
+  "version": "0.0.2",
   "description": "react component for scrolling large amounts of data efficiently",
   "main": "dist/react-data-scroller.js",
   "module": "dist/react-data-scroller.ejs",
