--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,35 @@
 {
+  "include": ["src", "types"],
   "compilerOptions": {
-    "strict": false,
-    "target": "es5",
-    "module": "ES2015",
-    "moduleResolution": "node",
+    "alwaysStrict": true,
+    "baseUrl": "./",
+    "declaration": true,
     "declaration": true,
     "declarationDir": "./dist/types",
-    "strict": true,
+    "esModuleInterop": true,
+    "importHelpers": true,
     "jsx": "react",
-    "plugins": [{"name": "typescript-tslint-plugin"}],
-    "typeRoots": ["node_modules/@types"],
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true
+    "lib": ["dom", "esnext"],
+    "module": "esnext",
+    "moduleResolution": "node",
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "paths": {
+      "*": ["src/*", "node_modules/*"]
+    },
+    "rootDirs": ["src", "stories"],
+    "sourceMap": true,
+    "strict": true,
+    "strictFunctionTypes": true,
+    "strictNullChecks": true,
+    "strictPropertyInitialization": true,
+    "target": "es5"
   },
   "awesomeTypescriptLoaderOptions": {
     "typeRoots": ["types"]
-  },
-  "include": ["src"]
+  }
 }
