feat(polyfill): add polyfill for position:sticky

--- a/package.json
+++ b/package.json
@@ -57,5 +57,7 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "stickyfilljs": "^2.1.0"
+  }
 }
