--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-docgen-typescript-loader": "^3.0.1",
     "react-docgen-typescript-webpack-plugin": "^1.1.0",
     "react-dom": "^16.8.4",
+    "react-hooks-testing-library": "^0.5.1",
     "react-testing-library": "^6.1.2",
     "rollup": "^1.6.0",
     "rollup-plugin-postcss": "^2.0.3",
